sdks/swift/Sources/CGoudEngine/include/goud_engine.h

/**
 * FFI-safe playback mode enum.
 */
typedef enum FfiPlaybackMode {
    /**
     * Restart from frame 0 after the last frame.
     */
    Loop = 0,
    /**
     * Stop at the last frame and mark the animation as finished.
     */
    OneShot = 1,
} FfiPlaybackMode;
/**
 * Heap-allocated builder for constructing an `AnimationClip` across FFI.
 */
typedef struct FfiAnimationClipBuilder FfiAnimationClipBuilder;
/**
 * Opaque identifier for an engine context.
 */
typedef struct GoudContextId {
    uint64_t _0;
} GoudContextId;
/**
 * FFI-safe entity identifier.
 */
typedef uint64_t GoudEntityId;
/**
 * FFI-safe Sprite representation.
 */
typedef struct FfiSprite {
    /**
     * Texture handle (index and generation packed as u64).
     */
    uint64_t texture_handle;
    /**
     * Color tint red component (0.0 - 1.0).
     */
    float color_r;
    /**
     * Color tint green component (0.0 - 1.0).
     */
    float color_g;
    /**
     * Color tint blue component (0.0 - 1.0).
     */
    float color_b;
    /**
     * Color tint alpha component (0.0 - 1.0).
     */
    float color_a;
    /**
     * Source rectangle X position (if has_source_rect is true).
     */
    float source_rect_x;
    /**
     * Source rectangle Y position.
     */
    float source_rect_y;
    /**
     * Source rectangle width.
     */
    float source_rect_width;
    /**
     * Source rectangle height.
     */
    float source_rect_height;
    /**
     * Whether source_rect is set.
     */
    bool has_source_rect;
    /**
     * Flip horizontally flag.
     */
    bool flip_x;
    /**
     * Flip vertically flag.
     */
    bool flip_y;
    /**
     * Explicit render-order layer.
     */
    int32_t z_layer;
    /**
     * Anchor point X (normalized 0-1).
     */
    float anchor_x;
    /**
     * Anchor point Y (normalized 0-1).
     */
    float anchor_y;
    /**
     * Custom size width (if has_custom_size is true).
     */
    float custom_size_x;
    /**
     * Custom size height.
     */
    float custom_size_y;
    /**
     * Whether custom_size is set.
     */
    bool has_custom_size;
} FfiSprite;
/**
 * Heap-allocated sprite builder for FFI use.
 */
typedef struct FfiSpriteBuilder {
    /**
     * The sprite being built.
     */
    struct FfiSprite sprite;
} FfiSpriteBuilder;
/**
 * FFI-safe Color representation.
 */
typedef struct FfiColor {
    /**
     * Red component (0.0 - 1.0).
     */
    float r;
    /**
     * Green component (0.0 - 1.0).
     */
    float g;
    /**
     * Blue component (0.0 - 1.0).
     */
    float b;
    /**
     * Alpha component (0.0 - 1.0).
     */
    float a;
} FfiColor;
/**
 * FFI-safe 2D vector representation.
 */
typedef struct FfiVec2 {
    /**
     * X component.
     */
    float x;
    /**
     * Y component.
     */
    float y;
} FfiVec2;
/**
 * FFI-safe, flat representation of a `SpriteAnimator` snapshot.
 */
typedef struct FfiSpriteAnimator {
    /**
     * Index of the current frame in the animation clip.
     */
    uint32_t current_frame;
    /**
     * Accumulated time since the last frame advance (seconds).
     */
    float elapsed;
    /**
     * Whether the animation is currently playing.
     */
    bool playing;
    /**
     * Whether a OneShot animation has completed.
     */
    bool finished;
    /**
     * Seconds per frame.
     */
    float frame_duration;
    /**
     * Playback mode.
     */
    enum FfiPlaybackMode mode;
    /**
     * Total number of frames in the clip.
     */
    uint32_t frame_count;
} FfiSpriteAnimator;
/**
 * FFI-compatible error code type.
 */
typedef int32_t GoudErrorCode;
/**
 * FFI-safe result type for returning success/failure status across the FFI boundary.
 */
typedef struct GoudResult {
    /**
     * The error code. `SUCCESS` (0) on success, error code on failure.
     */
    GoudErrorCode code;
    /**
     * True if the operation succeeded, false otherwise.
     */
    bool success;
} GoudResult;
/* === ECS === */

/**
 * Checks if an entity has a specific component.
 */
bool goud_component_has(struct GoudContextId context_id, GoudEntityId entity_id, uint64_t type_id_hash);
/**
 * Gets a read-only pointer to a component on an entity.
 */
const uint8_t *goud_component_get(struct GoudContextId context_id, GoudEntityId entity_id, uint64_t type_id_hash);
/**
 * Gets a mutable pointer to a component on an entity.
 */
uint8_t *goud_component_get_mut(struct GoudContextId context_id, GoudEntityId entity_id, uint64_t type_id_hash);
/**
 * Adds the same component type to multiple entities in a single batch.
 */
uint32_t goud_component_add_batch(struct GoudContextId context_id, const uint64_t *entity_ids, uint32_t count, uint64_t type_id_hash, const uint8_t *data_ptr, size_t component_size);
/**
 * Removes the same component type from multiple entities in a single batch.
 */
uint32_t goud_component_remove_batch(struct GoudContextId context_id, const uint64_t *entity_ids, uint32_t count, uint64_t type_id_hash);
/**
 * Checks if multiple entities have a specific component type.
 */
uint32_t goud_component_has_batch(struct GoudContextId context_id, const uint64_t *entity_ids, uint32_t count, uint64_t type_id_hash, uint8_t *out_results);
/**
 * Registers a component type with the engine.
 */
bool goud_component_register_type(uint64_t type_id_hash, const uint8_t *name_ptr, size_t name_len, size_t size, size_t align);
/**
 * Adds a component to an entity.
 */
GoudResult goud_component_add(struct GoudContextId context_id, GoudEntityId entity_id, uint64_t type_id_hash, const uint8_t *data_ptr, size_t data_size);
/**
 * Removes a component from an entity.
 */
GoudResult goud_component_remove(struct GoudContextId context_id, GoudEntityId entity_id, uint64_t type_id_hash);
/* === Sprite === */

/**
 * Creates a new sprite builder with a texture handle.
 */
struct FfiSpriteBuilder *goud_sprite_builder_new(uint64_t texture_handle);
/**
 * Creates a new sprite builder with default values.
 */
struct FfiSpriteBuilder *goud_sprite_builder_default(void);
/**
 * Sets the texture handle on the builder.
 */
struct FfiSpriteBuilder *goud_sprite_builder_with_texture(struct FfiSpriteBuilder *builder, uint64_t texture_handle);
/**
 * Sets the color tint on the builder.
 */
struct FfiSpriteBuilder *goud_sprite_builder_with_color(struct FfiSpriteBuilder *builder, float r, float g, float b, float a);
/**
 * Sets the alpha (transparency) on the builder.
 */
struct FfiSpriteBuilder *goud_sprite_builder_with_alpha(struct FfiSpriteBuilder *builder, float alpha);
/**
 * Sets the source rectangle on the builder for sprite sheet rendering.
 */
struct FfiSpriteBuilder *goud_sprite_builder_with_source_rect(struct FfiSpriteBuilder *builder, float x, float y, float width, float height);
/**
 * Sets the horizontal flip flag on the builder.
 */
struct FfiSpriteBuilder *goud_sprite_builder_with_flip_x(struct FfiSpriteBuilder *builder, bool flip);
/**
 * Sets the vertical flip flag on the builder.
 */
struct FfiSpriteBuilder *goud_sprite_builder_with_flip_y(struct FfiSpriteBuilder *builder, bool flip);
/**
 * Sets both flip flags on the builder.
 */
struct FfiSpriteBuilder *goud_sprite_builder_with_flip(struct FfiSpriteBuilder *builder, bool flip_x, bool flip_y);
/**
 * Sets the anchor point on the builder.
 */
struct FfiSpriteBuilder *goud_sprite_builder_with_anchor(struct FfiSpriteBuilder *builder, float x, float y);
/**
 * Sets a custom size on the builder.
 */
struct FfiSpriteBuilder *goud_sprite_builder_with_custom_size(struct FfiSpriteBuilder *builder, float width, float height);
/**
 * Builds and consumes the sprite builder, returning the final sprite.
 */
struct FfiSprite goud_sprite_builder_build(struct FfiSpriteBuilder *builder);
/**
 * Frees a sprite builder without building.
 */
void goud_sprite_builder_free(struct FfiSpriteBuilder *builder);
/**
 * Gets the custom size of the sprite.
 */
bool goud_sprite_get_custom_size(const struct FfiSprite *sprite, struct FfiVec2 *out_size);
/**
 * Returns whether the sprite has a custom size set.
 */
bool goud_sprite_has_custom_size(const struct FfiSprite *sprite);
/**
 * Creates a new sprite with the specified custom size (builder pattern).
 */
struct FfiSprite goud_sprite_with_custom_size(struct FfiSprite sprite, float width, float height);
/**
 * Sets the texture handle for the sprite.
 */
void goud_sprite_set_texture(struct FfiSprite *sprite, uint64_t handle);
/**
 * Gets the texture handle of the sprite.
 */
uint64_t goud_sprite_get_texture(const struct FfiSprite *sprite);
/**
 * Gets the effective size of the sprite.
 */
struct FfiVec2 goud_sprite_size_or_rect(const struct FfiSprite *sprite);
/**
 * Creates a new animation clip builder.
 */
struct FfiAnimationClipBuilder *goud_animation_clip_builder_new(float frame_duration, enum FfiPlaybackMode mode);
/**
 * Adds a frame rectangle to the animation clip builder.
 */
struct FfiAnimationClipBuilder *goud_animation_clip_builder_add_frame(struct FfiAnimationClipBuilder *builder, float x, float y, float w, float h);
/**
 * Frees an animation clip builder without building.
 */
void goud_animation_clip_builder_free(struct FfiAnimationClipBuilder *builder);
/**
 * Consumes an animation clip builder and returns an `FfiSpriteAnimator`.
 */
struct FfiSpriteAnimator goud_sprite_animator_from_clip(struct FfiAnimationClipBuilder *builder);
/**
 * Returns the current frame index of the animator.
 */
uint32_t goud_sprite_animator_get_current_frame(const struct FfiSpriteAnimator *animator);
/**
 * Returns whether the animator is currently playing.
 */
bool goud_sprite_animator_is_playing(const struct FfiSpriteAnimator *animator);
/**
 * Returns whether the animator has finished (OneShot completed).
 */
bool goud_sprite_animator_is_finished(const struct FfiSpriteAnimator *animator);
/* === Error === */

/**
 * Clears the last error on the current thread.
 */
void goud_clear_last_error(void);
/**
 * Returns the white color constant.
 */
struct FfiColor goud_color_white(void);
/**
 * Returns the black color constant.
 */
struct FfiColor goud_color_black(void);
/**
 * Returns the red color constant.
 */
struct FfiColor goud_color_red(void);
/**
 * Returns the green color constant.
 */
struct FfiColor goud_color_green(void);
/**
 * Returns the blue color constant.
 */
struct FfiColor goud_color_blue(void);
/**
 * Returns the yellow color constant.
 */
struct FfiColor goud_color_yellow(void);
/**
 * Returns the transparent color constant.
 */
struct FfiColor goud_color_transparent(void);
/**
 * Creates a color from RGBA components.
 */
struct FfiColor goud_color_rgba(float r, float g, float b, float a);
/**
 * Creates a color from RGB components with alpha = 1.0.
 */
struct FfiColor goud_color_rgb(float r, float g, float b);
/**
 * Creates a color from 8-bit RGBA values (0-255).
 */
struct FfiColor goud_color_from_u8(uint8_t r, uint8_t g, uint8_t b, uint8_t a);
/**
 * Creates a color from a hex value (0xRRGGBB or 0xRRGGBBAA).
 */
struct FfiColor goud_color_from_hex(uint32_t hex);
/**
 * Linearly interpolates between two colors.
 */
struct FfiColor goud_color_lerp(struct FfiColor from, struct FfiColor to, float t);
/**
 * Returns a new color with the specified alpha.
 */
struct FfiColor goud_color_with_alpha(struct FfiColor color, float alpha);
/**
 * Returns the error code of the last error on the current thread.
 */
GoudErrorCode goud_last_error_code(void);
/**
 * Writes the last error message into a caller-provided buffer.
 */
int32_t goud_last_error_message(uint8_t *buf, size_t buf_len);