sdks/csharp/generated/NativeMethods.g.cs


        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiVec2 goud_sprite_get_custom_size(ref FfiSprite sprite);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_sprite_has_custom_size(ref FfiSprite sprite);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiSprite goud_sprite_with_custom_size(FfiSprite sprite, float width, float height);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void goud_sprite_set_texture(ref FfiSprite sprite, ulong handle);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern ulong goud_sprite_get_texture(ref FfiSprite sprite);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiVec2 goud_sprite_size_or_rect(ref FfiSprite sprite);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr goud_sprite_builder_new(ulong texture_handle);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr goud_sprite_builder_default();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr goud_sprite_builder_with_texture(IntPtr builder, ulong handle);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr goud_sprite_builder_with_color(IntPtr builder, float r, float g, float b, float a);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr goud_sprite_builder_with_alpha(IntPtr builder, float alpha);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr goud_sprite_builder_with_source_rect(IntPtr builder, float x, float y, float width, float height);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr goud_sprite_builder_with_flip_x(IntPtr builder, [MarshalAs(UnmanagedType.U1)] bool flip);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr goud_sprite_builder_with_flip_y(IntPtr builder, [MarshalAs(UnmanagedType.U1)] bool flip);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr goud_sprite_builder_with_flip(IntPtr builder, [MarshalAs(UnmanagedType.U1)] bool flip_x, [MarshalAs(UnmanagedType.U1)] bool flip_y);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr goud_sprite_builder_with_anchor(IntPtr builder, float x, float y);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr goud_sprite_builder_with_custom_size(IntPtr builder, float width, float height);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiSprite goud_sprite_builder_build(IntPtr builder);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void goud_sprite_builder_free(IntPtr builder);

        // color
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiColor goud_color_white();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiColor goud_color_black();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiColor goud_color_red();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiColor goud_color_green();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiColor goud_color_blue();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiColor goud_color_yellow();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiColor goud_color_transparent();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiColor goud_color_rgba(float r, float g, float b, float a);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiColor goud_color_rgb(float r, float g, float b);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiColor goud_color_from_u8(byte r, byte g, byte b, byte a);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiColor goud_color_from_hex(uint hex);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiColor goud_color_lerp(FfiColor from, FfiColor to, float t);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiColor goud_color_with_alpha(FfiColor color, float alpha);

        // sprite_animator
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr goud_animation_clip_builder_new(float frame_duration, PlaybackMode mode);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr goud_animation_clip_builder_add_frame(IntPtr builder, float x, float y, float w, float h);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void goud_animation_clip_builder_free(IntPtr builder);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiSpriteAnimator goud_sprite_animator_from_clip(IntPtr builder);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint goud_sprite_animator_get_current_frame(ref FfiSpriteAnimator animator);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_sprite_animator_is_playing(ref FfiSpriteAnimator animator);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_sprite_animator_is_finished(ref FfiSpriteAnimator animator);

        // component_generic
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_component_register_type(ulong type_id_hash, IntPtr name_ptr, nuint name_len, nuint size, nuint align);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern GoudResult goud_component_add(GoudContextId ctx, ulong entity_id, ulong type_id_hash, IntPtr data_ptr, nuint data_size);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern GoudResult goud_component_remove(GoudContextId ctx, ulong entity_id, ulong type_id_hash);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_component_has(GoudContextId ctx, ulong entity_id, ulong type_id_hash);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr goud_component_get(GoudContextId ctx, ulong entity_id, ulong type_id_hash);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr goud_component_get_mut(GoudContextId ctx, ulong entity_id, ulong type_id_hash);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint goud_component_add_batch(GoudContextId ctx, IntPtr entity_ids, uint count, ulong type_id_hash, IntPtr data_ptr, nuint component_size);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint goud_component_remove_batch(GoudContextId ctx, IntPtr entity_ids, uint count, ulong type_id_hash);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint goud_component_has_batch(GoudContextId ctx, IntPtr entity_ids, uint count, ulong type_id_hash, IntPtr out_results);

        // error
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int goud_last_error_code();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int goud_last_error_message(IntPtr buf, nuint buf_len);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void goud_clear_last_error();

    }
}
